Regress/LABEL3.EXP
LABEL3.ASO(8) : Error A2209: Syntax error: db
